discussion/kv_engine/128635/128635_rev23_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Move StatCollector to using stats.def.h StatSpecs

Change-Id: I56ec2dcf56c9a2aa29453d585894e1a7444f01c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-26 16:39:50.000000000
Message: 
Uploaded patch set 23: Patch Set 22 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-26 18:51:36.000000000
Message: 
Patch Set 23: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3996/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:34: error: base class has incomplete type [clang-diagnostic-error]
class MockStatCollector : public StatCollector {
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:7: note: definition of "MockStatCollector" is not complete until the closing "}"
class MockStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:34: error: unknown class name "StatCollector"; did you mean "MockStatCollector"? [clang-diagnostic-error]
class MockStatCollector : public StatCollector {
                                 ^~~~~~~~~~~~~
                                 MockStatCollector
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:7: note: "MockStatCollector" declared here
class MockStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:29:11: error: use of undeclared identifier "StatCollector"; did you mean "MockStatCollector"? [clang-diagnostic-error]
    using StatCollector::addStat;
          ^~~~~~~~~~~~~
          MockStatCollector
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:7: note: "MockStatCollector" declared here
class MockStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:29:26: error: using declaration refers to its own class [clang-diagnostic-error]
    using StatCollector::addStat;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:31:5: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    MOCK_METHOD(void,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/gmock-function-mocker.h:43:3: note: expanded from macro "MOCK_METHOD"
  GMOCK_PP_VARIADIC_CALL(GMOCK_INTERNAL_MOCK_METHOD_ARG_, __VA_ARGS__)
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/internal/gmock-pp.h:82:3: note: expanded from macro "GMOCK_PP_VARIADIC_CALL"
  GMOCK_PP_CAT(_Macro, GMOCK_PP_NARG(__VA_ARGS__))(__VA_ARGS__)
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/internal/gmock-pp.h:18:30: note: expanded from macro "GMOCK_PP_CAT"
#define GMOCK_PP_CAT(_1, _2) GMOCK_PP_INTERNAL_CAT(_1, _2)
                             ^
note: (skipping 1 expansions in backtrace; use -fmacro-backtrace-limit=0 to see all)
note: expanded from here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/gmock-function-mocker.h:60:3: note: expanded from macro "GMOCK_INTERNAL_MOCK_METHOD_ARG_4"
  GMOCK_INTERNAL_MOCK_METHOD_IMPL(                                            \
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/gmock-function-mocker.h:110:38: note: expanded from macro "GMOCK_INTERNAL_MOCK_METHOD_IMPL"
              GMOCK_PP_IF(_Override, override, )                               \
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:33:24: error: use of undeclared identifier "cb" [clang-diagnostic-error]
                (const cb::stats::StatDef& k,
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:35:24: error: unknown type name "Labels" [clang-diagnostic-error]
                 const Labels& labels),
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3996/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:34:
error: base class has incomplete type [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3996/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29787/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\include\statistics\units.h(85): error C2039: "string_view_literals": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29787/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2523/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25818/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4326/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5407/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5215/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5304/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13125/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
